# tesser

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md
.github/workflows/: ci.yml  publish-sdks.yml  release.yml  sdk-python.yml
config/: default.toml  markets.toml
configs/etl/: sample_iso_csv.toml
connectors/tesser-binance/: Cargo.toml
connectors/tesser-binance/src/: lib.rs  ws.rs
connectors/tesser-bybit/: Cargo.toml
connectors/tesser-bybit/src/: lib.rs  ws.rs
connectors/tesser-paper/: Cargo.toml
connectors/tesser-paper/src/: conditional.rs  fees.rs  lib.rs
docs/: package.json  pnpm-lock.yaml  source.config.ts
docs/app/: global.css
docs/app/(home)/: layout.tsx  page.tsx
docs/app/(home)/blog/: page.tsx
docs/app/(home)/blog/[slug]/: page.tsx
docs/app/(home)/components/: crystal-scene.tsx  ui-overlay.tsx
docs/content/blog/: introducing-tesser.mdx
docs/content/docs/: index.mdx
docs/content/docs/01-getting-started/: index.mdx  installation.mdx
docs/content/docs/02-core-concepts/: event-loop.mdx  exchange-abstraction.mdx  financial-concepts.mdx  market-microstructure.mdx
docs/content/docs/03-strategy-lab/: execution-plugins.mdx  meta.json  rpc-strategies.mdx  signal-lifecycle.mdx  using-indicators.mdx
docs/content/docs/04-operations/: backtesting.mdx  data-engineering.mdx  live-trading.mdx  manual-bybit-public-gz.mdx  meta.json  risk-management.mdx  state-reconciliation.mdx
docs/content/docs/05-reference/: cli-commands.mdx  configuration.mdx  rfc-003-programmable-execution.mdx
docs/lib/: layout.shared.tsx  metadata.ts  source.ts
examples/: README.md
examples/data/: btcusdt_1m_sample.csv  btcusdt_1m_sample.parquet
examples/plugin-chase/: Cargo.toml
examples/plugin-chase/src/: lib.rs
examples/strategies/: rsi_reversion.toml  sma_cross.toml
patch/: release.patch
research/: README.md
research/scripts/: walk_forward_sma.py
scripts/: precommit.sh
sdk/tesser-py/: Justfile  README.md  pyproject.toml
sdk/tesser-py/examples/: sma_cross.py
sdk/tesser-py/protos/tesser/rpc/v1/: tesser.proto
sdk/tesser-py/scripts/: codegen.py
sdk/tesser-py/src/tesser/: __init__.py  conversions.py  models.py  runner.py  service.py  strategy.py
sdk/tesser-py/src/tesser/utils/: __init__.py  pandas.py
sdk/tesser-py/tesser/: client.py  runner.py  strategy.py
sdk/tesser-py/tesser/protos/tesser/rpc/v1/: tesser_pb2.py  tesser_pb2_grpc.py
sdk/tesser-py/tesser/utils/: decimal.py  logging.py
sdk/tesser-py/tests/integration/: test_runner.py
sdk/tesser-py/tests/unit/: test_decimal.py
tesser/: Cargo.toml
tesser-backtester/: Cargo.toml  README.md
tesser-backtester/src/: lib.rs  reporting.rs
tesser-broker/: Cargo.toml
tesser-broker/src/: connector.rs  lib.rs  limiter.rs  router.rs
tesser-cli/: Cargo.toml  README.md
tesser-cli/src/: alerts.rs  app.rs  control.rs  data_validation.rs  lib.rs  live.rs  main.rs  state.rs  telemetry.rs
tesser-cli/src/reconcile/: diff.rs  handlers.rs  mod.rs  snapshot.rs
tesser-cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
tesser-cli/tests/: backtest_streaming.rs  data_engineering.rs  live_run.rs  monitoring_stream.rs  resilience_rate_limit.rs  resilience_recovery.rs
tesser-config/: Cargo.toml
tesser-config/src/: lib.rs
tesser-core/: Cargo.toml
tesser-core/src/: identifiers.rs  lib.rs
tesser-cortex/: Cargo.toml
tesser-cortex/src/: engine.rs
tesser-data/: Cargo.toml
tesser-data/src/: analytics.rs  download.rs  encoding.rs  io.rs  lib.rs  merger.rs  parquet.rs  recorder.rs  transform.rs
tesser-data/src/etl/: mod.rs
tesser-events/: Cargo.toml
tesser-events/src/: lib.rs
tesser-execution/: Cargo.toml
tesser-execution/src/: lib.rs  orchestrator.rs  repository.rs
tesser-execution/src/algorithm/: iceberg.rs  mod.rs  pegged.rs  sniper.rs  trailing_stop.rs  twap.rs  vwap.rs
tesser-execution/src/wasm/: engine.rs
tesser-execution/tests/: integration_test.rs
tesser-indicators/: Cargo.toml  README.md
tesser-indicators/src/: combinators.rs  core.rs  lib.rs
tesser-indicators/src/indicators/: atr.rs  bollinger.rs  ema.rs  ichimoku.rs  macd.rs  mod.rs  rsi.rs  sma.rs
tesser-journal/: Cargo.toml  README.md
tesser-journal/src/: lmdb.rs
tesser-ledger/: Cargo.toml  README.md
tesser-ledger/src/: entry.rs  error.rs  journal.rs  lib.rs  parquet.rs  query.rs  repository.rs  sequencer.rs  sqlite.rs
tesser-markets/: Cargo.toml
tesser-markets/src/: lib.rs
tesser-portfolio/: Cargo.toml  README.md
tesser-portfolio/src/: lib.rs
tesser-rpc/: Cargo.toml  README.md
tesser-rpc/proto/: tesser.proto
tesser-rpc/src/: client.rs  conversions.rs  strategy.rs
tesser-rpc/src/transport/: grpc.rs
tesser-rpc/tests/: chaos_resilience.rs  grpc_e2e.rs
tesser-strategy/: Cargo.toml
tesser-strategy/src/: lib.rs
tesser-test-utils/: Cargo.toml
tesser-test-utils/src/: rest.rs  state.rs  websocket.rs
tesser-wasm/: Cargo.toml  README.md
tesser-wasm/src/: guest.rs  host.rs  lib.rs  types.rs
tesser-wasm/wit/: execution.wit
tesser/src/: lib.rs
