[package]
name = "tesser-backtester"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Backtesting harness that replays historical data through Tesser strategies"
readme = "README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tesser-broker.workspace = true
tesser-core.workspace = true
tesser-data.workspace = true
tesser-execution.workspace = true
tesser-portfolio.workspace = true
tesser-markets.workspace = true
tesser-strategy.workspace = true
tesser-paper.workspace = true
itertools = "0.13"
rust_decimal.workspace = true
