[package]
name = "tesser-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for running and operating the Tesser framework"
readme = "README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
futures.workspace = true
reqwest.workspace = true
prometheus.workspace = true
hyper.workspace = true
tracing-appender.workspace = true
csv.workspace = true
tesser-backtester.workspace = true
tesser-config.workspace = true
tesser-core.workspace = true
tesser-data.workspace = true
tesser-events.workspace = true
tesser-execution.workspace = true
tesser-portfolio.workspace = true
tesser-markets.workspace = true
tesser-strategy.workspace = true
tesser-broker.workspace = true
tesser-paper.workspace = true
tesser-bybit.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
tesser-test-utils.workspace = true
tempfile = "3.10"
