[package]
name = "tesser-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Order orchestration, routing, and execution engine for Tesser"
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tesser-broker = { version = "0.9.2", path = "../tesser-broker" }
tesser-core = { version = "0.9.2", path = "../tesser-core" }
tesser-strategy = { version = "0.9.2", path = "../tesser-strategy" }
tesser-wasm = { path = "../tesser-wasm" }
thiserror.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
wasmtime = { version = "18.0", features = ["component-model"] }
wasmtime-wasi = { version = "18.0", features = ["preview2"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["test-util"] }
tesser-paper = { version = "0.9.2", path = "../connectors/tesser-paper" }
