[package]
name = "tesser-markets"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tesser-core = { path = "../tesser-core" }
tesser-broker = { path = "../tesser-broker" }
