[package]
name = "tesser-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM plugin SDK for the Tesser execution runtime"
readme = "README.md"

[features]
default = []
guest = ["wit-bindgen", "once_cell"]

[dependencies]
chrono.workspace = true
once_cell = { version = "1.19", optional = true }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
wit-bindgen = { version = "0.24", optional = true }
