[package]
name = "tesser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified facade for the Tesser trading framework"
repository = "https://github.com/pluveto/tesser"
keywords = ["trading", "framework"]
categories = ["algorithms", "finance"]
readme = "README.md"

[dependencies]
tesser-core.workspace = true
tesser-config.workspace = true
tesser-data.workspace = true
tesser-events.workspace = true
tesser-execution.workspace = true
tesser-portfolio.workspace = true
tesser-markets.workspace = true
tesser-strategy.workspace = true
tesser-strategy-macros.workspace = true
tesser-indicators.workspace = true
tesser-broker.workspace = true
tesser-backtester.workspace = true
tesser-paper.workspace = true
tesser-bybit.workspace = true
